# CAP

./: README.md
Python/: HostMachine.py
Worksheet 1-Part1-23083770/: README.md  cli.c  flash_ops.c  flash_ops.h
Worksheet 1-Part2-23083770/: README.md  filesystem.c  filesystem.h  main.c
Worksheet 2/: CMakeLists.txt  README.md  flash_ops.c  main.c  protocol.c  protocol.h
